made card extend for edge to edge on mobile. added a component for card list. fixed general styles

--- a/src/index.css
+++ b/src/index.css
@@ -239,7 +239,7 @@
 		}
 	}
 
-	.underline-base {
+	.underline-effect {
 		position: relative;
 		padding-bottom: 1px;
 
@@ -255,18 +255,10 @@
 			background-color: theme('colors.purple.700');
 			opacity: 0;
 		}
-	}
-
-	.underline-hover {
-		@apply underline-base;
 
 		&::before {
 			transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
 		}
-	}
-
-	.underline-active {
-		@apply underline-base;
 
 		&::after {
 			transition: opacity 750ms;
